# ev-meter

./: .gitignore  .pre-commit-config.yaml  CONVERSION_SUMMARY.md  LICENSE  README.md  RELEASE_AUTOMATION.md  analyze_response.py  hacs.json  pyproject.toml  release.py  test_config_flow.py  test_integration_setup.py  test_mqtt_connection.py
.github/workflows/: ci.yml
custom_components/evmeter/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
custom_components/evmeter/translations/: en.json
docs/: AI_AGENT.md  ARCHITECTURE.md  DEVELOPMENT.md  PRD.md  PROTOCOL.md  README.md
tests/evmeter_integration/: test_config_flow.py
