[tool.poetry]
name = "evmeter-client"
version = "0.1.0"
description = "A Python client for EV-Meter chargers and a Home Assistant custom integration."
authors = ["Amir Vadai <amirva@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "evmeter_client"}]

[tool.poetry.dependencies]
python = "^3.11"
aiomqtt = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.8.0"
black = "^24.0.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
